force-app/main/default/objects/Org_Limits__c/Org_Limits__c.object-meta.xml
<CustomObject>
    <label>Org Limits</label>
    <nameField>
        <label>Limit Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>