force-app/main/default/objects/Org_Limits__c/fields/Remaining_Limit__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Limit__c</fullName>
    <label>Remaining Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>