force-app/main/default/objects/Org_Limits__c/fields/Total_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_Limit__c</fullName>
    <label>Total Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>