force-app/main/default/objects/Org_Limits__c/fields/Usage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Usage_Percentage__c</fullName>
    <formula>((Total_Limit__c-Remaining_Limit__c)/ Total_Limit__c)*100</formula>
    <label>Usage Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>